--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"start": "parcel src/extension/manifest.json --host localhost --target webext-dev --dist-dir distribution",
-		"build": "parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-prod",
+		"build": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-prod",
 		"lint": "run-p lint:*",
 		"lint-fix": "run-p 'lint:* -- --fix'",
 		"lint:css": "stylelint src/**/*.css",
