--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -24,7 +24,8 @@
 	"content_scripts": [
 		{
 			"matches": ["*://lichess.org/*"],
-			"js": ["keyboard-control.js"]
+			"js": ["keyboard-control.js"],
+			"run_at": "document_start"
 		}
 	]
 }
