--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"start": "parcel src/extension/manifest.json --host localhost --target webext-dev --dist-dir distribution",
 		"build": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-prod",
-		"dev": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-prod --no-optimize",
+		"dev": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-dev --no-optimize",
 		"lint": "run-p lint:*",
 		"lint-fix": "run-p 'lint:* -- --fix'",
 		"lint:css": "stylelint src/**/*.css",
