--- a/package.json
+++ b/package.json
@@ -42,18 +42,19 @@
 		"parcel": "^2.0.0-rc.0",
 		"stylelint": "^13.13.1",
 		"stylelint-config-xo": "^0.20.0",
+		"web-ext": "^6.5.0",
 		"xo": "^0.44.0"
 	},
 	"targets": {
-    "webext-dev": {
-      "sourceMap": {
-        "inline": true,
-        "inlineSources": true
-      }
-    },
-    "webext-prod": {}
-  },
+		"webext-dev": {
+			"sourceMap": {
+				"inline": true,
+				"inlineSources": true
+			}
+		},
+		"webext-prod": {}
+	},
 	"webExt": {
-		"sourceDir": "distribution"
+		"sourceDir": "distribution/webext-prod"
 	}
 }
