--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"@parcel/transformer-image": "^2.0.0-rc.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.0.0-rc.0",
+		"purescript": "^0.14.5",
+		"spago": "^0.20.3",
 		"stylelint": "^13.13.1",
 		"stylelint-config-xo": "^0.20.0",
 		"web-ext": "^6.5.0",
