--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -11,6 +11,10 @@
 			"strict_min_version": "67.0"
 		}
 	},
+	"browser_action": {
+		"default_icon": "icon.png",
+		"default_title": "Online Chess Enhancement Suite"
+	},
 	"icons": {
 		"128": "icon.png"
 	},
