--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Online Chess Enhancement Suite",
 	"version": "0.0.0",
-	"description": "Online Chess Enhancement Suite",
+	"description": "Allows to use keyboard and mouse to move pieces on lichess.org. To move a piece, point the mouse cursor to the square that you would like to move to and press a key corresponding to a type of piece which sould be moved there.",
 	"homepage_url": "https://github.com/klausweiss/online-chess-enhancement-suite",
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
