Add npm run zip-src

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint:css": "stylelint src/**/*.css",
 		"lint:js": "xo",
 		"test": "run-p lint:* build",
-		"watch": "parcel watch src/extension/manifest.json --dist-dir distribution --no-cache --no-hmr"
+		"watch": "parcel watch src/extension/manifest.json --dist-dir distribution --no-cache --no-hmr",
+		"zip-src": "rm oces.zip && zip oces.zip -r * -x 'distribution/*' 'local/*' 'node_modules/*' 'output/*' 'web-ext-artifacts/*' 'docs/*'"
 	},
 	"browserslist": [
 		"last 1 Chrome version",
