--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -7,7 +7,7 @@
 	"minimum_chrome_version": "74",
 	"applications": {
 		"gecko": {
-			"id": "online-chess-enhancement-suite@notlmn.github.io",
+			"id": "online-chess-enhancement-suite@klausweiss",
 			"strict_min_version": "67.0"
 		}
 	},
