--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"build": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-prod",
 		"dev": "spago build && parcel build src/extension/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0 --target webext-dev --no-optimize",
 		"dist": "npm run build && web-ext build --overwrite-dest",
+		"dist-chrome": "npm run build && ln -s ./distribution/webext-prod chrome_online-chess-enhancement-suite && zip chrome_online-chess-enhancement-suite_`cat ./src/extension/manifest.json | jq -r .version`.zip -r chrome_online-chess-enhancement-suite && rm chrome_online-chess-enhancement-suite",
 		"lint": "run-p lint:*",
 		"lint-fix": "run-p 'lint:* -- --fix'",
 		"lint:css": "stylelint src/**/*.css",
