--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"@parcel/transformer-image": "^2.0.0-rc.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.0.0-rc.0",
-		"purescript": "^0.14.4",
+		"purescript": "=0.14.4",
 		"spago": "^0.20.3",
 		"stylelint": "^13.13.1",
 		"stylelint-config-xo": "^0.20.0",
