--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -14,7 +14,7 @@
 	"page_action": {
 		"default_icon": "icon.png",
 		"default_title": "Online Chess Enhancement Suite",
-		"default_popup": "preferences.html",
+		"default_popup": "sites/preferences/preferences.html",
 		"show_matches": ["https://lichess.org/*"]
 	},
 	"icons": {
@@ -28,17 +28,18 @@
 		"storage"
 	],
 	"web_accessible_resources": [
-		"tutorial.html"
+		"sites/changelog/changelog.html",
+		"sites/tutorial/tutorial.html"
 	],
 	"options_ui": {
 		"chrome_style": true,
-		"page": "preferences.html"
+		"page": "sites/preferences/preferences.html"
 	},
 	"background": {
 		"scripts": [
-			"background-tutorial.js",
-			"background-chrome-page-action.js",
-			"background-lichess.js"
+			"background-scripts/on-install-or-update.js",
+			"background-scripts/chrome-page-action.js",
+			"background-scripts/firefox-intercept-lichess.js"
 		]
 	},
 	"content_scripts": [
