Resvole dependabot alert for markdown-it

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@parcel/config-webextension": "=2.0.1",
 		"@parcel/transformer-image": "=2.0.1",
 		"json-schema": ">=0.4.0",
+		"markdown-it": ">=12.3.2",
 		"npm-run-all": "=4.1.5",
 		"parcel": "=2.0.1",
 		"posthtml-markdownit": "=1.2.3",
@@ -27,7 +28,8 @@
 		"web-ext-submit": "=6.6.0"
 	},
 	"dependencies pinned due to dependabot security alerts": {
-		"json-schema": ">=0.4.0"
+		"json-schema": ">=0.4.0",
+		"markdown-it": ">=12.3.2"
 	},
 	"alias": {
 		"./src/extension/sites/docs/**": "./docs/$1",
