--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
 		"posthtml-markdownit": "=1.2.3",
 		"purescript": "=0.14.4",
 		"spago": "=0.20.3",
-		"web-ext": "=6.6.0",
-		"web-ext-submit": "=6.6.0"
+		"web-ext": "^7.2.0",
+		"web-ext-submit": "^7.2.0"
 	},
 	"dependencies pinned due to dependabot security alerts": {
 		"follow-redirects": ">=1.14.7",
